--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+
+
     <title>Daniel Wile</title>
   </head>
   <body>
